--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ gunicorn = "*"
 sqlalchemy = "*"
 flask-sqlalchemy = "*"
 psycopg2 = "*"
+pyjwt = "*"
+flask-jwt-extended = "*"
 
 [requires]
 python_version = "3.8"
